--- a/index.html
+++ b/index.html
@@ -400,6 +400,6 @@
     <span class="magic">You make my world magical</span> <span class="flower-emoji">&#127800;</span>
   </h1>
   
-  <a href="gallery.html" class="back-btn">Click here, my love</a>
+  <a href="gallery.html" class="back-btn">Click here, monkey</a>
 </body>
 </html>
