--- a/gallery.html
+++ b/gallery.html
@@ -119,6 +119,13 @@
   <script>
     // List of images in the photos/ folder
     const imageList = [
+      "IMG_20241020_112835.jpg",
+      "IMG_20241020_112844.jpg",
+      "IMG_20241108_202016.jpg",
+      "IMG_20241108_212747.jpg",
+      "IMG_20241118_151054.jpg",
+      "IMG_20241118_151806.jpg",
+      "IMG_20241221_160744.jpg",
       "IMG_20250105_111412.jpg",
       "IMG_20250105_111545.jpg",
       "IMG_20250105_123937.jpg",
@@ -131,7 +138,10 @@
       "IMG_20250430_194816.jpg",
       "IMG_20250504_200520.jpg",
       "IMG_20250613_120013.jpg",
-      "IMG_20250613_120114.jpg"
+      "IMG_20250613_120114.jpg",
+      "Snapchat-1161580771.jpg",
+      "Snapchat-37745447.jpg",
+      "Snapchat-536139701.jpg"
     ];
     const gallery = document.getElementById('gallery');
     const modal = document.getElementById('modal');
